--- a/src/components/art-cutscene/art-cutscene.css
+++ b/src/components/art-cutscene/art-cutscene.css
@@ -8,6 +8,10 @@
 }
 
 .art-cutscene-main{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     padding: 0;
     margin: 5rem 0 5rem 0;
     min-height: 100vh;
@@ -25,4 +29,29 @@
     color: var(--art-splash-color);
     text-shadow: var(--art-splash-shadow-fn);
     user-select: none;
+}
+
+
+@media only screen and (max-width:1024px) {
+    :root {
+        --art-splash-shadow-fn: 0 .1rem .75rem var(--art-splash-shadow);
+        --art-splash-font-size: 5rem;
+        --art-splash-padding: 0;
+    }
+
+    .art-cutscene-main {
+        margin: 2.5rem 0 2.5rem 0;
+    }
+}
+
+@media only screen and (max-width:600px) {
+    :root {
+        --art-splash-shadow-fn: 0 .1rem .5rem var(--art-splash-shadow);
+        --art-splash-font-size: 2.5rem;
+        --art-splash-padding: 0;
+    }
+
+    .art-cutscene-main {
+        margin: 1rem 0 1rem 0;
+    }
 }
