Added space wars to code service

--- a/src/components/screenshot/screenshot.css
+++ b/src/components/screenshot/screenshot.css
@@ -15,7 +15,7 @@
 .thumb{
     width:95%;
     height: 95%;
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
     border-radius: .5rem .2rem 1rem .2rem;
